Remove units from table cells. Align table headers to left. Float input and output sections now that they are no longer in columns.

--- a/src/htdocs/css/_ReadingView.scss
+++ b/src/htdocs/css/_ReadingView.scss
@@ -5,7 +5,6 @@
 .reading-view {
 	> .row {
 		border-bottom:1px solid #aaa;
-		padding-bottom:1.33em;
 	}
 }
 
@@ -14,7 +13,7 @@
 	.first-mark-down,
 	.east-up {
 		th, td {
-			padding-bottom:16px;
+			padding-bottom:1em;
 		}
 	}
 
@@ -43,14 +42,26 @@
 
 .declination-input,
 .inclination-input {
+	margin-bottom:1em;
+	float:left;
 
 	table {
 		margin-right:2em;
+
+		.units {
+			display:none;
+		}
+
+		> thead > tr > th > small {
+			font-size: 0.7em;
+			font-weight: normal;
+			margin-left: -2px;
+		}
 	}
 
 	tbody th {
-		text-align:right;
-		padding-right:16px;
+		text-align: left;
+		padding-right:0.5em;
 	}
 
 	input {
@@ -69,12 +80,12 @@
 	}
 
 	.measurement-seconds {
-		padding-right:16px;
+		padding-right:1em;
 	}
 
 	.measurement-h,
 	.measurement-z {
-		padding-right:8px;
+		padding-right:0.5em;
 	}
 
 	td.measurement-h,
@@ -82,5 +93,15 @@
 	td.measurement-z,
 	td.measurement-f {
 		font-size:smaller;
+		text-align:center;
 	}
+}
+
+.declination-output,
+.inclination-output {
+	float:left;
+	margin-bottom:1em;
+	padding: 1em;
+	border: 1px solid #d8d8d8;
+	background: #f8f8f8;
 }
